Stage 8.3: CI/CD and release gates - coverage floor, SBOM/License, API compat, integration profiles
- jacoco coverage-floor: BUNDLE LINE>=0.60 / BRANCH>=0.40 anti-regression floors (measured 20 modules: lowest 63%/49%)
- cyclonedx makeAggregateBom (skipNotDeployed=false, decompiled to find the deploy-skip interplay) + license aggregate-add-third-party: per-module CycloneDX 1.5 bom.json (53 components) + THIRD-PARTY.txt (104 deps)
- japicmp api-compat gate vs 0.1.3 baseline: Checkpoint regains @Deprecated 8-arg legacy constructor, starter regains non-@Bean agentFactory(ModelClient) shim; agent-otel-export/examples japicmp.skip (no baseline); binary-verified by 0.1.3-compiled probe running on 0.1.4-SNAPSHOT
- integration profiles as JUnit tags (default excluded via agent4j.surefire.excludedGroups): postgres (PostgresIT x2 + PG16 service in CI), mcp-it (McpStdioIT 3/3: real Python subprocess server, destroyForcibly crash-restart-retry, python3 probe with auditable skip), a2a-it (26 real-HTTP-transport tests tagged), sandbox-escape (escape regressions + DockerDaemonProbeIT: daemon probe + DOCKER placeholder loud-fail contract)
- surefire includes extended with **/*IT.java (default *Test patterns silently ignore IT suffixes; caught when -Dgroups=mcp-it ran 0 tests)
- CI: six jobs (build+SBOM artifact, postgres-it, transport-it matrix, sandbox-escape+dind, api-compat, vulnerability-scan via anchore grype)
- protocol fuzz: ProtocolFuzzTest 4 + A2AWireFuzzTest 6
- docs: modules.md profile matrix, limitations.md DOCKER loud-fail + PG status, harness-contract.md 3.5 refresh, CHANGELOG entry, roadmap 8.3 complete